# hybrid-signal-lab

./: .gitignore  README.md  bench-030-9b.sh  bench-030-diag-9b.sh  bench-030-diag-olmo.sh  bench-030-olmo.sh  bench-diag.sh  best_panel_args.json  example_runner.sh  main.py  mimic-8B.sh  mimic-olmo3.sh  pod.sh  pyproject.toml  run_early_late_all.sh  run_kitchen_sink.sh  signal_lab_output.json
battery/: README.md
bench/: README.md  __init__.py  run_bench.py  tasks.py
colony/: README.md  __init__.py  agent.py  buffer.py  cli.py  colony.py  signal_lab.py  sweep.py  sweep_analyze.py  sweep_cartridges.py  sweep_compare.py  sweep_plot_analyze.py
data/: long1.txt  med1.txt  med2.txt  med_new2.txt  med_new3.txt  prompts_med.json  short0.txt  short1.txt  short2.txt  short3.txt
docs/: capstone_working.md  commentaries.md  companion-paper.md  data_manifests.md  early_late_summary.txt  figure_head_entropy_shared_vs_specific_qwen9b_caption.md  figure_task_dependent_gain_response_qwen9b_caption.md  kitchen_sink_signal_report.md  make_constant_gain_dose_response_balanced_attention_figure.py  make_constant_gain_dose_response_balanced_block_figure.py  make_constant_gain_dose_response_block_figure.py  make_constant_gain_dose_response_figure.py  make_head_entropy_bookend_bistate_figure.py  make_head_entropy_correlation_figure.py  make_head_entropy_normalization_comparison_figure.py  make_head_entropy_shared_vs_specific_figure.py  make_intra_family_type_responsiveness_balanced_attention_comparison_figure.py  make_intra_family_type_responsiveness_balanced_attention_figure.py  make_intra_family_type_responsiveness_balanced_attention_top8_figure.py  make_intra_family_type_responsiveness_balanced_block_figure.py  make_intra_family_type_responsiveness_balanced_block_top8_figure.py  make_oracle_headroom_distribution_figure.py  (+13 more)
(+382 files in other folders)
