[project]
name = "mas-capstone"
version = "0.1.0"
description = "Colony: collective control testbed for multi-agent LLM systems"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "typer",
    "ollama",
    "marimo>=0.20.4",
    "transformers>=5.3.0",
    "torch>=2.10.0",
    "accelerate>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["colony"]

[project.scripts]
colony = "colony.cli:main"
