[project]
name = "hybrid-signal-lab"
version = "0.2.2"
description = "Hybrid Signal Lab: probing and analysis for LLM hybrid-model interventions"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==2.4.3",
    "transformers==5.5.0",
    "torch==2.11.0",
    "accelerate==1.13.0",
    "dotenv==0.9.9",
    "datasets==4.8.2",
    "matplotlib==3.10.8",
    "flash-linear-attention==0.4.2",
    "ripser==0.6.12",
    "persim==0.3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["signal_lab", "model"]
